Fixing drafts on launchpad.

--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -53,7 +53,7 @@
               - @challenge_tasks.each do |t|
                 %tr.task-row
                   %td
-                    - if t.submitted_answer_id and t.status_id.to_i != Answer::INCOMPLETE
+                    - if t.submitted_answer_id and t.status_id.to_i == Answer::CORRECT
                       %div= link_to truncate(t.question, length: 145), submission_drilldown_path(t.submitted_answer_id)
                     - else
                       %div= link_to truncate(t.question, length: 145), take_section_path(@current_section, task_id: t.id)
