truncating challenge names

--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -18,7 +18,7 @@
             %ul
               - @paths.first(21).each do |path|
                 %li
-                  %div{ "data-tip" => "Take the #{path.name} Challenge!" }
+                  %div{ "data-tip" => truncate("Take the #{path.name} Challenge!", length: 30, separator:' ')  }
                     = link_to challenge_url(path.permalink), id: "challenge_start_#{path.permalink}" do
                       = image_tag path.picture, class: "challenge-start", alt: "#{path.name}"
             .clear_floats
@@ -53,7 +53,7 @@
               %ul
                 - @paths.first(21).each do |path|
                   %li
-                    %div{ "data-tip" => "Take the #{path.name} Challenge!" }
+                    %div{ "data-tip" => truncate("Take the #{path.name} Challenge!", length: 30, separator:' ') }
                       = link_to challenge_url(path.permalink), id: "challenge_start_#{path.permalink}" do
                         = image_tag path.picture, class: "challenge-start", alt: "#{path.name}"
               .clear_floats
