fixing font css

--- a/app/assets/stylesheets/font.css.scss
+++ b/app/assets/stylesheets/font.css.scss
@@ -14,6 +14,7 @@
     src: url('https://s3.amazonaws.com/moonlite-nsdub/static/Fonts/muli-regular-webfont-webfont.svg') format('svg');
 
     }
+  }
 }
 
 @font-face {
@@ -32,6 +33,7 @@
     src: url('https://s3.amazonaws.com/moonlite-nsdub/static/Fonts/muli-italic-webfont-webfont.svg') format('svg');
 
     }
+  }
 }
 
 @font-face {
@@ -49,6 +51,7 @@
     src: url('https://s3.amazonaws.com/moonlite-nsdub/static/Fonts/muli-light-webfont.svg') format('svg');
 
     }
+  }
 }
 
 @font-face {
