--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -22,7 +22,7 @@
   .aboutbox
     .header 
       %img{ src: GIANT_STONEY, alt: "Stoney"} 
-      %h1 Validate your Candidates' Skills
+      %h1 Measure your Job Candidates' Skills
     .body 
       %div 
         .area 
