small copy changes

--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -93,7 +93,7 @@
                 %h1 
                   Robust and dynamic testing. 
                 %p 
-                  Take advantage of MetaBright's industry-leading testing. We measure your candidates across more dimensions than anyone else. And our question formats uncover your candidates' real-world knowledge. 
+                  Take advantage of MetaBright's industry-leading testing. We assess your candidates across more dimensions than anyone else. And our question formats uncover your candidates' real-world knowledge. 
               .image.right{ style: "margin-top:15px; "} 
                 %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/CR.png"} 
           %section.gradient_down 
