facebook conversion tracking code

--- a/app/views/groups/signup/confirmation.html.haml
+++ b/app/views/groups/signup/confirmation.html.haml
@@ -13,12 +13,12 @@
         %h1{ style: "margin-top:0;" } Welcome to MetaBright!
     %hr{ style: "margin: 0 0 10px;"}
     - if false and @group.can_add_users?
-      .invite_box
-        %div
-          %h3 Invite your colleagues to join you:
-          %p Just put their email addresses in the box below. They'll be asked to register and will automatically be added to your company's account. Your plan allows you to add up to **X** people.
-          %textarea{ rows: "3" }
-          %button.submit_button Invite
+      / .invite_box
+      /   %div
+      /     %h3 Invite your colleagues to join you:
+      /     %p Just put their email addresses in the box below. They'll be asked to register and will automatically be added to your company's account. Your plan allows you to add up to **X** people.
+      /     %textarea{ rows: "3" }
+      /     %button.submit_button Invite
     .body
       %h3 Your company's hiring is about to get turbocharged!
       %p Take a look at the nav bar at the top of the page. Here's a quick overview of what everything does:
