change copy on trial page

--- a/app/views/groups/signup/trial.html.haml
+++ b/app/views/groups/signup/trial.html.haml
@@ -16,7 +16,7 @@
         %h1 MetaBright Evaluator
     .body{ style: "padding:16px 16px 0;" }
       .reassurance{ style: "margin-bottom: 50px;"}
-        %h2{ style: "font-size: 31px; "} You're Invited to Try MetaBright for Free
+        %h2{ style: "font-size: 30px; "} You're Invited to Use MetaBright for Free
         %h3 Begin Testing Your Candidates in Less Than 60 Seconds
       %p{ style: "position: relative; left: 78px; bottom: 23px; float: left; "}
         = link_to "https://stripe.com/help/security", target: "_blank" do
